--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
   <source src="https://drama.kn0ax.com/newscript.mp4" type="video/mp4">
 </video>
 
-
-<p> <a href="https://www.tampermonkey.net/">eklentiyi indir</a><p/>
+<p> Eklentiyi İndir<p/>
+<p> <a href="https://chrome.google.com/webstore/detail/tampermonkey/dhdgffkkebhmkfjojejmpbldmpobfkfo?hl=en">Google Chrome</a><p/>
+<p> <a href="https://addons.opera.com/en/extensions/details/tampermonkey-beta/">Opera</a><p/>
+  <p> <a href="https://www.tampermonkey.net/">Firefox</a><p/>
+    <p> <a href="https://apps.apple.com/us/app/userscripts/id1463298887">Safari</a><p/>
+      
 <p><a href="https://github.com/osuplace/templateManager/raw/main/dist/templateManager.user.js">script link</a><p/>
 <button onclick="copyToClipboard()">URL'yi Kopyala</button>
 
