--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 
 <script>
 function copyToClipboard() {
-  const url = 'https://kn0ax.github.io/porcay/porcay.json';
+  const url = 'https://kn0.dev/porcay.json';
   navigator.clipboard.writeText(url);
 }
 </script>
 
 <p>daha sonra sag usten yazilanlari takip edin</p>
 
-<p>made by kn0ax, realneurosama and with help from forsen community <3 </p>
+<p>made by kn0ax, realneurosama, rktfier and with help from forsen community <3 </p>
 
 </body>
 </html>
