--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
   <source src="https://drama.kn0ax.com/newscript.mp4" type="video/mp4">
 </video>
 
-<p> Eklentiyi İndir<p/>
-<p> <a href="https://chrome.google.com/webstore/detail/tampermonkey/dhdgffkkebhmkfjojejmpbldmpobfkfo?hl=en">Google Chrome</a><p/>
-<p> <a href="https://addons.opera.com/en/extensions/details/tampermonkey-beta/">Opera</a><p/>
-  <p> <a href="https://www.tampermonkey.net/">Firefox</a><p/>
-    <p> <a href="https://apps.apple.com/us/app/userscripts/id1463298887">Safari</a><p/>
+<p>
+  <a href="https://chrome.google.com/webstore/detail/tampermonkey/dhdgffkkebhmkfjojejmpbldmpobfkfo?hl=en" style="display: inline-block;">Google Chrome</a>
+  <a href="https://addons.opera.com/en/extensions/details/tampermonkey-beta/" style="display: inline-block;">Opera</a>
+  <a href="https://addons.mozilla.org/en-US/firefox/addon/tampermonkey/" style="display: inline-block;">Firefox</a>
+  <a href="https://apps.apple.com/us/app/userscripts/id1463298887" style="display: inline-block;">Safari</a>
+</p>
       
 <p><a href="https://github.com/osuplace/templateManager/raw/main/dist/templateManager.user.js">script link</a><p/>
 <button onclick="copyToClipboard()">URL'yi Kopyala</button>
@@ -31,6 +32,9 @@ function copyToClipboard() {
 </script>
 
 <p>daha sonra sag usten yazilanlari takip edin</p>
+
+<p>Veya direk eski tıklayıp gidebileceginiz map icin </p>
+<p><a href="https://kn0.dev/tik.html">TIKLA</a><p/>
 
 <p>made by kn0ax, realneurosama, rktfier and with help from forsen community <3 </p>
 
