--- a/index.html
+++ b/index.html
@@ -238,13 +238,13 @@ NEVER GONNA TELL A LIE AND HURT YOU
         </div>
         Tüm tarayıcılar:
         <div id="other-browsers">
-            <a id="chrome" class="browser" href="https://chrome.google.com/webstore/detail/tampermonkey/dhdgffkkebhmkfjojejmpbldmpobfkfo?hl=en">
+            <a id="chrome" class="browser" href="https://chrome.google.com/webstore/detail/violent-monkey/jinjaccalgkegednnccohejagnlnfdag">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Google_Chrome_icon_%28September_2014%29.svg" alt="" srcset="">
             </a>
-            <a id="firefox" class="browser" href="https://addons.mozilla.org/en-US/firefox/addon/tampermonkey/">
+            <a id="firefox" class="browser" href="https://addons.mozilla.org/firefox/addon/violentmonkey/">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/a/a0/Firefox_logo%2C_2019.svg" alt="" srcset="">
             </a>
-            <a id="edge" class="browser" href="https://microsoftedge.microsoft.com/addons/detail/tampermonkey/iikmkjmpaadaobahmlepeloendndfphd">
+            <a id="edge" class="browser" href="https://microsoftedge.microsoft.com/addons/detail/eeagobfjdenkkddmbclomhiblgggliao">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/f/f6/Edge_Logo_2019.svg" alt="" srcset="">
             </a>
             <a id="safari" class="browser" href="https://apps.apple.com/us/app/tampermonkey/id1482490089?mt=12">
@@ -291,7 +291,7 @@ NEVER GONNA TELL A LIE AND HURT YOU
     }
 
 function copyToClipboard() {
-        navigator.clipboard.writeText("https://github.com/okunamayanad/r-place-2023/raw/main/RPlace.2023.user.js").then(() => {
+        navigator.clipboard.writeText("https://github.com/Kn0ax/porcay/raw/erkan/tempman.user.js").then(() => {
             alert('URL kopyalandı.')
         })
 }
@@ -335,19 +335,19 @@ function copyToClipboard() {
 
     if (browser === 'chrome') {
         document.getElementById('detected-browser').innerHTML = `
-            <a class="browser" href="https://chrome.google.com/webstore/detail/tampermonkey/dhdgffkkebhmkfjojejmpbldmpobfkfo?hl=en">
+            <a class="browser" href="https://chrome.google.com/webstore/detail/violent-monkey/jinjaccalgkegednnccohejagnlnfdag">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Google_Chrome_icon_%28September_2014%29.svg" alt="" srcset="">
             </a>
         `
     } else if (browser === 'firefox') {
         document.getElementById('detected-browser').innerHTML = `
-            <a class="browser" href="https://addons.mozilla.org/en-US/firefox/addon/tampermonkey/">
+            <a class="browser" href="https://addons.mozilla.org/firefox/addon/violentmonkey/">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/a/a0/Firefox_logo%2C_2019.svg" alt="" srcset="">
             </a>
         `
     } else if (browser === 'edge') {
         document.getElementById('detected-browser').innerHTML = `
-            <a class="browser" href="https://microsoftedge.microsoft.com/addons/detail/tampermonkey/iikmkjmpaadaobahmlepeloendndfphd">
+            <a class="browser" href="https://microsoftedge.microsoft.com/addons/detail/eeagobfjdenkkddmbclomhiblgggliao">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/f/f6/Edge_Logo_2019.svg" alt="" srcset="">
             </a>
         `
@@ -383,7 +383,7 @@ function copyToClipboard() {
 
 </body>
 <footer>
-    made & designed by <a href="https://kax.one" target="_blank" rel="noopener noreferrer">Kax</a> , <a target="_blank" rel="noopener noreferrer" href="https://github.com/okunamayanad">okunamayanad</a> , <a target="_blank" rel="noopener noreferrer" href="https://github.com/Kn0ax">Kn0ax</a> , <a target="_blank" rel="noopener noreferrer" href="https://github.com/rktfier">rktfier</a> , Rexolion , <a target="_blank" rel="noopener noreferrer" href="https://github.com/hypenord">hypenord</a> and with help from community <3
+    made & designed by <a href="https://kax.one" target="_blank" rel="noopener noreferrer">Kax</a>, <a target="_blank" rel="noopener noreferrer" href="https://github.com/Kn0ax">Kn0ax</a>, <a target="_blank" rel="noopener noreferrer" href="https://github.com/okunamayanad">okunamayanad</a>, <a target="_blank" rel="noopener noreferrer" href="https://github.com/rktfier">rktfier</a>, Rexolion, <a target="_blank" rel="noopener noreferrer" href="https://github.com/hypenord">hypenord</a> and with help from community <3
 </footer>
 </html>
 
