fix some wrong link

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ NEVER GONNA TELL A LIE AND HURT YOU
 <body>
 <div id="container">
     <h1>Porçay's r/place Script</h1>
-    <p>Yapmanız gereken tarayıcınıza uygun TamperMonkey eklentisini kurup "Script'i Kur" düğmesine basmanız.
+    <p>Yapmanız gereken tarayıcınıza uygun Tamper/VioletMonkey eklentisini kurup "Script'i Kur" düğmesine basmanız.
         <br>
         <br>
         Sonrasında çıkan popup üzerinden scripti eklemeniz.
@@ -365,11 +365,11 @@ function copyToClipboard() {
 
     function download() {
         if (browser === 'chrome') {
-            window.open('https://chrome.google.com/webstore/detail/tampermonkey/dhdgffkkebhmkfjojejmpbldmpobfkfo?hl=en')
+            window.open('https://chrome.google.com/webstore/detail/violent-monkey/jinjaccalgkegednnccohejagnlnfdag?hl=en')
         } else if (browser === 'firefox') {
-            window.open('https://addons.mozilla.org/en-US/firefox/addon/tampermonkey/')
+            window.open('https://addons.mozilla.org/firefox/addon/violentmonkey//')
         } else if (browser === 'edge') {
-            window.open('https://microsoftedge.microsoft.com/addons/detail/tampermonkey/iikmkjmpaadaobahmlepeloendndfphd')
+            window.open('https://chrome.google.com/webstore/detail/violent-monkey/jinjaccalgkegednnccohejagnlnfdag')
         } else if (browser === 'safari') {
             window.open('https://apps.apple.com/us/app/tampermonkey/id1482490089?mt=12')
         } else {
