--- a/tik.html
+++ b/tik.html
@@ -86,7 +86,7 @@
             bg.drawImage(img, 0, 0, img.width, img.height, 0, Y_OFFSET, w, h)
             drawGrid(0, Y_OFFSET, w, h + Y_OFFSET, bg)
         };
-        img.src = 'https://cdn.discordapp.com/attachments/959851188612907018/1131700621901316217/placeoranti2023.png'
+        img.src = 'https://media.discordapp.net/attachments/1131692666476826688/1132022034935861278/pixelburddranzer.png'
           function drawText(text, x, y){
             fg.font = '80px Sans-serif';
             fg.strokeStyle = 'black';
