--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ NEVER GONNA TELL A LIE AND HURT YOU
     <div id="buttons">
         <button style="grid-area: a;" onclick="download()">Tampermonkey'i İndir</button>
         <button style="grid-area: b;" id="dropdown-button" onclick="dropdownToggle()">Harita Tıkla Git</button>
-        <a style="grid-area: c;" class="button" href="https://github.com/okunamayanad/r-place-2023/raw/main/RPlace.2023.user.js">Script'i Kur</a>
+        <a style="grid-area: c;" class="button" href="https://github.com/Kn0ax/porcay/raw/erkan/tempman.user.js">Script'i Kur</a>
         <button style="grid-area: d;" onclick="videoDialogToggle()" class="button">Anlamayanlar için video</button>
     </div>
 
