--- a/index.html
+++ b/index.html
@@ -55,16 +55,16 @@ NEVER GONNA TELL A LIE AND HURT YOU
         html,
         body {
             display: flex;
-            justify-content: center;
             text-align: start;
             position: relative;
             height: 100%;
             width: 100%;
             background: linear-gradient(0deg, rgba(10, 0, 0, 0.55) 0%, rgba(10, 0, 0, 0.55) 100%), radial-gradient(71.48% 71.48% at 50.00% -0.00%, #D04141 0%, #761F1F 53.13%, #260000 100%);
             color: hsl(0, 0%, 100%);
+            overflow: auto;
         }
         footer {
-            position: fixed;
+            position: absolute;
             bottom: 0;
             left: 0;
             right: 0;
@@ -73,6 +73,21 @@ NEVER GONNA TELL A LIE AND HURT YOU
             font-size: .8rem;
             color: hsla(0, 0%, 100%, .5);
         }
+        @media (max-width: 512px) {
+            footer {
+                bottom: unset;
+                top: 0;
+            }
+
+            body {
+                height: auto;
+            }
+            #container {
+                margin-top: 6rem !important;
+                padding-bottom: 4rem;
+
+            }
+        }
         #container {
             width: clamp(300px, 75%, 800px);
             position: relative;
@@ -80,7 +95,9 @@ NEVER GONNA TELL A LIE AND HURT YOU
             display: flex;
             flex-direction: column;
             margin: 0 auto;
-            height: 100%;
+            height: auto;
+            top: 50%;
+            transform: translateY(-50%);
             gap: .5rem;
         }
         p {
@@ -113,11 +130,7 @@ NEVER GONNA TELL A LIE AND HURT YOU
         #buttons {
             display: grid;
             grid-template-columns: 1fr 1fr 1fr;
-            grid-template-rows: 1fr 1fr;
             gap: .5rem;
-            grid-template-areas:
-    "a b c"
-    "d d d";
         }
         a.button, button {
             color: hsl(0, 0%, 100%);
@@ -132,6 +145,7 @@ NEVER GONNA TELL A LIE AND HURT YOU
             align-items: center;
             cursor: pointer;
             font-weight: 500;
+            text-align: center;
         }
         button.small {
             display: inline-flex;
@@ -217,7 +231,7 @@ NEVER GONNA TELL A LIE AND HURT YOU
 <body>
 <div id="container">
     <h1>Porçay's r/place Script</h1>
-    <p>Yapmanız gereken tarayıcınıza uygun Tamper/VioletMonkey eklentisini kurup "Script'i Kur" düğmesine basmanız.
+    <p>Yapmanız gereken tarayıcınıza uygun TamperMonkey eklentisini kurup "Script'i Kur" düğmesine basmanız.
         <br>
         <br>
         Sonrasında çıkan popup üzerinden scripti eklemeniz.
@@ -232,19 +246,20 @@ NEVER GONNA TELL A LIE AND HURT YOU
         <video src="https://publiccdn.kn0.dev/erkan.mp4" controls></video>
     </div>
     <div id="tampermonkey">
+
         Tespit edilen tarayıcı:
         <div id="detected-browser">
 
         </div>
         Tüm tarayıcılar:
         <div id="other-browsers">
-            <a id="chrome" class="browser" href="https://chrome.google.com/webstore/detail/violent-monkey/jinjaccalgkegednnccohejagnlnfdag">
+            <a id="chrome" class="browser" href="https://chrome.google.com/webstore/detail/tampermonkey/dhdgffkkebhmkfjojejmpbldmpobfkfo?hl=en">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Google_Chrome_icon_%28September_2014%29.svg" alt="" srcset="">
             </a>
-            <a id="firefox" class="browser" href="https://addons.mozilla.org/firefox/addon/violentmonkey/">
+            <a id="firefox" class="browser" href="https://addons.mozilla.org/en-US/firefox/addon/tampermonkey/">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/a/a0/Firefox_logo%2C_2019.svg" alt="" srcset="">
             </a>
-            <a id="edge" class="browser" href="https://microsoftedge.microsoft.com/addons/detail/eeagobfjdenkkddmbclomhiblgggliao">
+            <a id="edge" class="browser" href="https://microsoftedge.microsoft.com/addons/detail/tampermonkey/iikmkjmpaadaobahmlepeloendndfphd">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/f/f6/Edge_Logo_2019.svg" alt="" srcset="">
             </a>
             <a id="safari" class="browser" href="https://apps.apple.com/us/app/tampermonkey/id1482490089?mt=12">
@@ -252,13 +267,16 @@ NEVER GONNA TELL A LIE AND HURT YOU
             </a>
         </div>
 
+        NOT: Eğer tarayıcınız belirlenemediyse Chrome ikonuna tıklayıp kurmayı deneyin. Tarayıcınız destekleniyorsa zaten (tarayıcı)'ya ekle butonunu görebileceksiniz.
+
+        <button onclick="download()">Tampermonkey'i İndir</button>
 
     </div>
+
     <div id="buttons">
-        <button style="grid-area: a;" onclick="download()">Tampermonkey'i İndir</button>
-        <button style="grid-area: b;" id="dropdown-button" onclick="dropdownToggle()">Harita Tıkla Git</button>
-        <a style="grid-area: c;" class="button" href="https://github.com/Kn0ax/porcay/raw/erkan/tempman.user.js">Script'i Kur</a>
-        <button style="grid-area: d;" onclick="videoDialogToggle()" class="button">Anlamayanlar için video</button>
+        <button  id="dropdown-button" onclick="dropdownToggle()">Harita Tıkla Git</button>
+        <a class="button" href="https://github.com/Kn0ax/porcay/raw/erkan/templateManager.user.js">Script'i Kur</a>
+        <button  onclick="videoDialogToggle()" class="button">Anlamayanlar için video</button>
     </div>
 
     <div id="dropdown">
@@ -289,9 +307,18 @@ NEVER GONNA TELL A LIE AND HURT YOU
         const videoDialog = document.getElementById('video-dialog')
         videoDialog.classList.toggle('active')
     }
+    navigator.mobileCheck = function() {
+        let check = false;
+        (function(a){if(/(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone|od)|iris|kindle|lge |maemo|midp|mmp|mobile.+firefox|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|re)\/|plucker|pocket|psp|series(4|6)0|symbian|treo|up\.(browser|link)|vodafone|wap|windows ce|xda|xiino/i.test(a)||/1207|6310|6590|3gso|4thp|50[1-6]i|770s|802s|a wa|abac|ac(er|oo|s\-)|ai(ko|rn)|al(av|ca|co)|amoi|an(ex|ny|yw)|aptu|ar(ch|go)|as(te|us)|attw|au(di|\-m|r |s )|avan|be(ck|ll|nq)|bi(lb|rd)|bl(ac|az)|br(e|v)w|bumb|bw\-(n|u)|c55\/|capi|ccwa|cdm\-|cell|chtm|cldc|cmd\-|co(mp|nd)|craw|da(it|ll|ng)|dbte|dc\-s|devi|dica|dmob|do(c|p)o|ds(12|\-d)|el(49|ai)|em(l2|ul)|er(ic|k0)|esl8|ez([4-7]0|os|wa|ze)|fetc|fly(\-|_)|g1 u|g560|gene|gf\-5|g\-mo|go(\.w|od)|gr(ad|un)|haie|hcit|hd\-(m|p|t)|hei\-|hi(pt|ta)|hp( i|ip)|hs\-c|ht(c(\-| |_|a|g|p|s|t)|tp)|hu(aw|tc)|i\-(20|go|ma)|i230|iac( |\-|\/)|ibro|idea|ig01|ikom|im1k|inno|ipaq|iris|ja(t|v)a|jbro|jemu|jigs|kddi|keji|kgt( |\/)|klon|kpt |kwc\-|kyo(c|k)|le(no|xi)|lg( g|\/(k|l|u)|50|54|\-[a-w])|libw|lynx|m1\-w|m3ga|m50\/|ma(te|ui|xo)|mc(01|21|ca)|m\-cr|me(rc|ri)|mi(o8|oa|ts)|mmef|mo(01|02|bi|de|do|t(\-| |o|v)|zz)|mt(50|p1|v )|mwbp|mywa|n10[0-2]|n20[2-3]|n30(0|2)|n50(0|2|5)|n7(0(0|1)|10)|ne((c|m)\-|on|tf|wf|wg|wt)|nok(6|i)|nzph|o2im|op(ti|wv)|oran|owg1|p800|pan(a|d|t)|pdxg|pg(13|\-([1-8]|c))|phil|pire|pl(ay|uc)|pn\-2|po(ck|rt|se)|prox|psio|pt\-g|qa\-a|qc(07|12|21|32|60|\-[2-7]|i\-)|qtek|r380|r600|raks|rim9|ro(ve|zo)|s55\/|sa(ge|ma|mm|ms|ny|va)|sc(01|h\-|oo|p\-)|sdk\/|se(c(\-|0|1)|47|mc|nd|ri)|sgh\-|shar|sie(\-|m)|sk\-0|sl(45|id)|sm(al|ar|b3|it|t5)|so(ft|ny)|sp(01|h\-|v\-|v )|sy(01|mb)|t2(18|50)|t6(00|10|18)|ta(gt|lk)|tcl\-|tdg\-|tel(i|m)|tim\-|t\-mo|to(pl|sh)|ts(70|m\-|m3|m5)|tx\-9|up(\.b|g1|si)|utst|v400|v750|veri|vi(rg|te)|vk(40|5[0-3]|\-v)|vm40|voda|vulc|vx(52|53|60|61|70|80|81|83|85|98)|w3c(\-| )|webc|whit|wi(g |nc|nw)|wmlb|wonu|x700|yas\-|your|zeto|zte\-/i.test(a.substr(0,4))) check = true;})(navigator.userAgent||navigator.vendor||window.opera);
+        return check;
+    };
 
+    if (navigator.mobileCheck()) {
+       window.location.href = "/mobil.html"
+    }
+    console.log(navigator.mobileCheck());
 function copyToClipboard() {
-        navigator.clipboard.writeText("https://github.com/Kn0ax/porcay/raw/erkan/tempman.user.js").then(() => {
+        navigator.clipboard.writeText("https://github.com/okunamayanad/r-place-2023/raw/main/RPlace.2023.user.js").then(() => {
             alert('URL kopyalandı.')
         })
 }
@@ -335,19 +362,19 @@ function copyToClipboard() {
 
     if (browser === 'chrome') {
         document.getElementById('detected-browser').innerHTML = `
-            <a class="browser" href="https://chrome.google.com/webstore/detail/violent-monkey/jinjaccalgkegednnccohejagnlnfdag">
+            <a class="browser" href="https://chrome.google.com/webstore/detail/tampermonkey/dhdgffkkebhmkfjojejmpbldmpobfkfo?hl=en">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Google_Chrome_icon_%28September_2014%29.svg" alt="" srcset="">
             </a>
         `
     } else if (browser === 'firefox') {
         document.getElementById('detected-browser').innerHTML = `
-            <a class="browser" href="https://addons.mozilla.org/firefox/addon/violentmonkey/">
+            <a class="browser" href="https://addons.mozilla.org/en-US/firefox/addon/tampermonkey/">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/a/a0/Firefox_logo%2C_2019.svg" alt="" srcset="">
             </a>
         `
     } else if (browser === 'edge') {
         document.getElementById('detected-browser').innerHTML = `
-            <a class="browser" href="https://microsoftedge.microsoft.com/addons/detail/eeagobfjdenkkddmbclomhiblgggliao">
+            <a class="browser" href="https://microsoftedge.microsoft.com/addons/detail/tampermonkey/iikmkjmpaadaobahmlepeloendndfphd">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/f/f6/Edge_Logo_2019.svg" alt="" srcset="">
             </a>
         `
@@ -365,11 +392,11 @@ function copyToClipboard() {
 
     function download() {
         if (browser === 'chrome') {
-            window.open('https://chrome.google.com/webstore/detail/violent-monkey/jinjaccalgkegednnccohejagnlnfdag?hl=en')
+            window.open('https://chrome.google.com/webstore/detail/tampermonkey/dhdgffkkebhmkfjojejmpbldmpobfkfo?hl=en')
         } else if (browser === 'firefox') {
-            window.open('https://addons.mozilla.org/firefox/addon/violentmonkey//')
+            window.open('https://addons.mozilla.org/en-US/firefox/addon/tampermonkey/')
         } else if (browser === 'edge') {
-            window.open('https://chrome.google.com/webstore/detail/violent-monkey/jinjaccalgkegednnccohejagnlnfdag')
+            window.open('https://microsoftedge.microsoft.com/addons/detail/tampermonkey/iikmkjmpaadaobahmlepeloendndfphd')
         } else if (browser === 'safari') {
             window.open('https://apps.apple.com/us/app/tampermonkey/id1482490089?mt=12')
         } else {
@@ -380,10 +407,10 @@ function copyToClipboard() {
     console.log("%cburda ne geziyon kanka", "color: white; background-color: red; font-size: 2rem; font-weight: bold;");
 
 </script>
-
-</body>
 <footer>
-    made & designed by <a href="https://kax.one" target="_blank" rel="noopener noreferrer">Kax</a>, <a target="_blank" rel="noopener noreferrer" href="https://github.com/Kn0ax">Kn0ax</a>, <a target="_blank" rel="noopener noreferrer" href="https://github.com/okunamayanad">okunamayanad</a>, <a target="_blank" rel="noopener noreferrer" href="https://github.com/rktfier">rktfier</a>, Rexolion, <a target="_blank" rel="noopener noreferrer" href="https://github.com/hypenord">hypenord</a> and with help from community <3
+    made & designed by <a href="https://kax.one" target="_blank" rel="noopener noreferrer">Kax</a> , <a target="_blank" rel="noopener noreferrer" href="https://github.com/okunamayanad">okunamayanad</a> , <a target="_blank" rel="noopener noreferrer" href="https://github.com/Kn0ax">Kn0ax</a> , <a target="_blank" rel="noopener noreferrer" href="https://github.com/rktfier">rktfier</a> , Rexolion , <a target="_blank" rel="noopener noreferrer" href="https://github.com/hypenord">hypenord</a> and with help from community <3
 </footer>
+</body>
+
 </html>
 
