--- a/mobil.html
+++ b/mobil.html
@@ -57,7 +57,7 @@ NEVER GONNA TELL A LIE AND HURT YOU
       display: flex;
       text-align: start;
       position: relative;
-      height: 100%;
+      height: auto;
       width: 100%;
       background: linear-gradient(0deg, rgba(10, 0, 0, 0.55) 0%, rgba(10, 0, 0, 0.55) 100%), radial-gradient(71.48% 71.48% at 50.00% -0.00%, #D04141 0%, #761F1F 53.13%, #260000 100%);
       color: hsl(0, 0%, 100%);
