--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ NEVER GONNA TELL A LIE AND HURT YOU
     const dropdownButton = document.getElementById('dropdown-button')
 
     function dropdownToggle() {
-        dropdown.style.top = `${dropdownButton.offsetTop + dropdownButton.offsetHeight}px`
+        dropdown.style.top = `${dropdownButton.offsetTop / 1.3}px`
         dropdown.style.left = `${dropdownButton.offsetLeft}px`
         dropdown.classList.toggle('active')
     }
